--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\Scripts\TextHandler.cs" />
      <Compile Include="Assets\Scripts\Viaje\CarController.cs" />
      <Compile Include="Assets\Scripts\Viaje\ViajeA.cs" />
+     <Compile Include="Assets\Scripts\cena\CenaControllerA.cs" />
      <Compile Include="Assets\Scripts\menu\MenuController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>F:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
