--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,17 +54,15 @@
      <Compile Include="Assets\Scripts\MoveChar.cs" />
      <Compile Include="Assets\Scripts\MsgController.cs" />
      <Compile Include="Assets\Scripts\Oficina\OficinaController.cs" />
+     <Compile Include="Assets\Scripts\Oficina2Controller.cs" />
      <Compile Include="Assets\Scripts\Opcion.cs" />
      <Compile Include="Assets\Scripts\PointObject.cs" />
      <Compile Include="Assets\Scripts\Reunion\ReunionController.cs" />
      <Compile Include="Assets\Scripts\TextHandler.cs" />
      <Compile Include="Assets\Scripts\Viaje\CarController.cs" />
      <Compile Include="Assets\Scripts\Viaje\ViajeA.cs" />
-<<<<<<< HEAD
      <Compile Include="Assets\Scripts\Viaje\ViajeB.cs" />
-=======
      <Compile Include="Assets\Scripts\cena\CenaControllerA.cs" />
->>>>>>> 86356672aff3c3d1a7efa9276f37368258faeaae
      <Compile Include="Assets\Scripts\menu\MenuController.cs" />
      <Compile Include="Assets\Scripts\splash.cs" />
      <Compile Include="Assets\Scripts\tv\tvController.cs" />
